--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,110 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
+.navbar{
+    background-color: #fff !important;
+}
+.navbar-brand{
+    font-size: 1.9rem !important;
+    color: #565387;
+}
+.bavbar a{
+    font-size: 1.3rem;
+    text-transform: capitalize;
+}
+.menu-active{
+    font-weight: bold;
+    text-decoration: underline;
+}
+.navbar a:hover{
+    color: #3498db;
+}
+@media(max-width: 991px){
+    .navbar-brand{
+        font-size: 1.5rem;
+    }
+    .menu-active{
+        font-weight: bold;
+        border-bottom: none;
+    }
+}
+/* ---------------------------------------------- */
+#header{
+    width: 100%;
+    height: 80vh;
+    margin-top: 70px;
+}
+#header h1{
+    margin: 0 0 10px 0;
+    font-size: 48px;
+    font-weight: 700;
+    color: black;
+}
+#header .brand-name {
+    color: #3498db;
+}
+#header h2{
+    color: #484848;
+    font-size: 24px;
+}
+#header .btn-get-started{
+    font-weight: 500;
+    font-size: 16px;
+    display: inline-block;
+    padding: 10px 30px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #3498db;
+    text-decoration: none;
+    border: 2px solid #3498db;
+}
+#header .btn-get-started:hover{
+    background-color: #3498db;   
+    color: white;
+}
+.header-img{
+    text-align: right;
+}
+#header .animated{
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+@-webkit-keyframes up-down{
+    0%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(-10px);
+    }
+}
+@keyframes up-down {
+     0%{
+        transform: translateY(10px);
+    }
+    100%{
+        transform: translateY(-10px);
+    }
+}
+/* ---------------------------------------- */
+footer {
+    background-color: #e0f7fa; /* Light blue background */
+    color: #333; /* Dark text color */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+footer .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+footer a {
+    color: inherit; /* Inherit text color */
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+footer a:hover {
+    color: #007bff; /* Change color on hover */
 }
